# Insurance_claims_automation

./: README.md  pyproject.toml
data/: PaymentRecords.xlsx  extracted_claims.xlsx  final_sample_insurance_data.xlsx  insurance_claims.xlsx  underwriter_list.xlsx
docs/: ARCHITECTURE.md
src/: agent_graph.py  common.py  config.py  helper_async.py  main.py  streamlit.py  utils.py
src/mcp_servers/: extractor_server.py  fraud_detection_server.py  notification_server.py  payment_processing_server.py  validation_server.py  verification_server.py
